tests/cli_renderer_width_40/cli_renderer_width_40.exp
Error --------------------- basic.js:6:2

Error: basic.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty

Error - name/that/gets/very/close.js:6:2

Error: name/that/gets/very/close.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty

Error ----------------------------------
name/that/gets/very/close2.js:6:2

Error: name/that/gets/very/close2.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty

Error - name_that_gets_very_close.js:6:2

Error: name_that_gets_very_close.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty

Error ----------------------------------
name_that_gets_very_close2.js:6:2

Error: name_that_gets_very_close2.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty

Error ----------------------------------
really/long/filename/that/is/much/more/then/40/characters.js:6:2

Error: really/long/filename/that/is/much/more/then/40/characters.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty

Error ----------------------------------
really_long_filename_that_is_much_more_then_40_characters.js:6:2

Error: really_long_filename_that_is_much_more_then_40_characters.js:6
  6: (null: empty); // Error: null ~> empty
      ^^^^ Cannot cast `null` to empty because null [1] is incompatible with empty [2].
  References:
    6: (null: empty); // Error: null ~> empty
        ^^^^ [1]: null
    6: (null: empty); // Error: null ~> empty
              ^^^^^ [2]: empty


Found 7 errors
